Products menü
Működő lista az adatbázisban szereplő gépek megjelenítésével, azonban a részletek még {in progress..}